syntax = "proto3";
package layer.mint;

option go_package = "github.com/tellor-io/layer/x/mint/types";

// GenesisState defines the mint module's genesis state.
message GenesisState {
  reserved 1; // 1 was previously used for the `Minter` field.

  // BondDenom is the denomination of the token that should be minted.
  string bond_denom = 2;

}
